[project]
name = "tuvl"
version = "2026.3.2.0"
description = "YAML-driven workflow orchestration engine — compose pipelines of functional nodes, LLM calls, API integrations, and MCP tools, served as a REST API with Postgres persistence and Redis-backed state"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Sooraj Rajagopalan", email = "sooraj@tuvl.io" }]
keywords = ["workflow", "orchestration", "ai", "llm", "agents", "fastapi", "yaml", "backend"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Ranges here are what downstream resolvers see (this is published-library
    # metadata); uv.lock carries the exact audited pins for our own builds.
    # --- CLI ---
    "typer>=0.26.5,<0.27", # Compatible with click 8.4.1
    "rich>=15.0.0",
    # --- Core Engine & AI (audited minor kept narrow for security) ---
    "litellm[google]>=1.86.2,<1.87",
    "pydantic>=2.13.4,<3", # Required by litellm
    "python-dotenv>=1.2.2,<2", # Required by litellm
    # --- REST API Server ---
    "fastapi>=0.136.0",
    "starlette>=0.49.0", # imported directly (request plumbing)
    "uvicorn[standard]>=0.44.0",
    "python-multipart>=0.0.12", # OAuth2PasswordRequestForm (login) needs it at import
    # --- Data, Persistence & Protocols ---
    "pydantic-settings>=2.14.1,<3",
    "sqlmodel>=0.0.38",
    "sqlalchemy[asyncio]>=2.0,<2.1", # imported directly, not only via sqlmodel
    "asyncpg>=0.31.0",
    "greenlet>=3.4.0", # Required for async SQLAlchemy/SQLModel workflows
    "pyyaml>=6.0.3",
    "httpx>=0.27.0",
    "mcp>=1.27.0", # Model Context Protocol
    # --- Security ---
    "biscuit-python>=0.4.0",
    "bcrypt>=5.0.0",
    # --- State & Queue ---
    "redis>=5.0.0", # asyncio support is built-in since redis 7+
    # --- Vector / RAG ---
    "pgvector>=0.3.0",
    # --- Observability ---
    "structlog>=24.0.0",
    "opentelemetry-api>=1.42.0",
    "opentelemetry-sdk>=1.42.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.0",
    "opentelemetry-instrumentation-fastapi>=0.63b0",
    # --- gRPC-Web ---
    "grpcio>=1.81.0", # gRPC core runtime
    "sonora>=0.2.3", # ASGI gRPC-Web wrapper (no Envoy required)
]

[project.optional-dependencies]
# Activates Tuvl Insight — a full browser-based developer portal for designing models
# and workflows, configuring datasources and LLM providers, managing IAM and federation,
# and testing execution with Tuvl Lens and Tuvl Spectrum.
# Install with: pip install tuvl[standard]
standard = [
    "tuvl-insight>=2026.3.2.0",
]

# Dev tooling is a PEP 735 dependency group (uv-native), not a published extra.
[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "mypy>=2.0.0",
    "grpcio-tools>=1.81.0",      # protoc code generation (run: make proto)
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
tuvl = "tuvl.cli.main:main"

[project.urls]
Homepage = "https://tuvl.io"
Documentation = "https://tuvl.dev"
Repository = "https://github.com/tuvl-io/tuvl"
Changelog = "https://github.com/tuvl-io/tuvl/blob/main/CHANGELOG.md"
Issues = "https://github.com/tuvl-io/tuvl/issues"

[tool.uv.workspace]
members = ["src/tuvl_insight"]

[tool.uv.sources]
tuvl-insight = { workspace = true }
tuvl = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuvl"]
# Exclude compiled UI assets — shipped separately via tuvl-insight
exclude = ["src/tuvl/cli/ui"]

[tool.hatch.build.targets.sdist]
exclude = [
    "ui/node_modules",
    "ui/src",
    ".github",
    "tests",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "G",   # flake8-logging-format — bans f-strings + .format() + % in logger calls
    "LOG", # flake8-logging — catches misuse of the stdlib logging module
    "ANN", # flake8-annotations — ratchet: new code must be annotated
]
ignore = [
    "E501",   # line too long — handled by ruff formatter
    "B008",   # do not perform function calls in default argument (FastAPI Depends pattern)
    "ANN401", # Any is a deliberate choice in this dict-driven engine
]

[tool.ruff.lint.isort]
known-first-party = ["tuvl"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# ASCII art in the banner intentionally contains trailing whitespace for alignment
"src/tuvl/cli/__init__.py" = ["W291", "W293"]
# Class-named variables are intentional (dynamic model/schema class creation)
"src/tuvl/core/api/crud_router.py" = ["N806"]
"src/tuvl/core/api/manager.py" = ["N806"]
# Auto-generated protobuf files — do not lint
"src/tuvl/core/grpc/*_pb2.py" = ["UP009", "E501", "F401", "I001", "ANN"]
"src/tuvl/core/grpc/*_pb2_grpc.py" = ["N802", "UP004", "I001", "F401", "E501", "ANN"]
# gRPC servicer method names must match proto-defined PascalCase names.
# ANN exempt until the dedicated servicer annotation pass (separate branch).
"src/tuvl/core/grpc/dev_servicer.py" = ["N802", "ANN"]
"src/tuvl/core/grpc/iam_servicer.py" = ["N802", "ANN"]
"src/tuvl/core/grpc/servicer.py" = ["N802", "ANN"]
# Dev-mode-only surface — annotate when its endpoints get pydantic models.
"src/tuvl/core/dev/router.py" = ["ANN"]
# The annotation ratchet is for src/ — test signatures stay lightweight.
"tests/**" = ["ANN"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
pretty = true

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
